--- a/src/app/commonComponent/autocomplete/autocomplete.component.html
+++ b/src/app/commonComponent/autocomplete/autocomplete.component.html
@@ -1,5 +1,5 @@
 <form >
-<mat-form-field appearance="outline" >
+<mat-form-field appearance="outline" class="p-1">
     <mat-label>سال</mat-label>
     <input type="text" placeholder="سال انتخابی" aria-label="Number" 
      matInput  
