--- a/src/app/commonComponent/sample1/sample1.component.html
+++ b/src/app/commonComponent/sample1/sample1.component.html
@@ -39,7 +39,7 @@
 
         <mat-form-field appearance="outline" class="p-1">
           <mat-label>ماه</mat-label>
-          <mat-select [(value)]="defaultSelect">
+          <mat-select [(value)]="defaultSelect" required formControlName="Month">
             <mat-option *ngFor="let data of matselectdata" [value]="data.id">{{data.name}}</mat-option>
           </mat-select>
         </mat-form-field>
@@ -48,7 +48,8 @@
           <app-autocomplete *ngFor="let item of autocompletedata;" ></app-autocomplete>
         </div> -->
 
-        <app-autocomplete [optionsData]="options" formControlName="Year" class="p-1"></app-autocomplete>
+        <app-autocomplete [optionsData]="options" formControlName="Year" ></app-autocomplete>
+        <app-autocomplete [optionsData]="options" formControlName="Year1" ></app-autocomplete>
 
         <!-- <app-autocomplete (data)="getdatacompelete($event)" [value]="autocompelete1" ></app-autocomplete> -->
         <!-- <mat-form-field appearance="outline" class="p-1">
@@ -73,7 +74,7 @@
           </mat-select>
         </mat-form-field> -->
 
-        <app-chips [items]="fruits" formControlName="GroupNew" class="p-1"></app-chips>
+        <app-chips [items]="fruits" formControlName="GroupNew" ></app-chips>
         
         <app-date-picker formControlName="BeginDate"></app-date-picker>
 
