--- a/src/app/modules/sample2/sample2.component.html
+++ b/src/app/modules/sample2/sample2.component.html
@@ -1,19 +1,14 @@
-<div class="d-flex  justify-content-start ">
-    <div class="col-6 p-2">
+<div class="d-flex  justify-content-center  ">
+    <div class="col-8 p-2">
         <div class="card">
-            <div class="card-header">
-                مثال 2
+            <div class="card-header d-flex justify-content-between">
+                <p>مثال 2</p>
             </div>
-            <div class="p-1">
-                <div style="height: 80vh;">
-                    <app-admin-grid heightGrid="100%" (selectedRow)="selectedRow($event)" [datagrid]="rowsData"
-                        [columnsgrid]="columnDefs">
-                    </app-admin-grid>
-                </div>
-            </div>
+            <app-group1></app-group1>
+            <app-group1></app-group1>
         </div>
     </div>
-    <div class="col-4 p-2">
+    <!-- <div class="col-4 p-2">
         <app-sample2-entry [formdata]="rowData"></app-sample2-entry>
-    </div>
+    </div> -->
 </div>
