--- a/src/app/modules/sample2/sample2.component.html
+++ b/src/app/modules/sample2/sample2.component.html
@@ -37,7 +37,8 @@
 
 
                 </div>
-                <mat-tab-group animationDuration="0ms">
+                <app-grid [caption]="'گروه اول'" [columnDefs]="columnDefs" [rowsData]="rowsData"></app-grid>
+                <!-- <mat-tab-group animationDuration="0ms">
                     <mat-tab label="گروه اول">
                         <app-group1></app-group1>
                     </mat-tab>
@@ -47,7 +48,7 @@
                     <mat-tab label="گروه سوم">
                         <app-group1></app-group1>
                     </mat-tab>
-                </mat-tab-group>
+                </mat-tab-group> -->
             </div>
         </div>
         <!-- <div class="col-4 p-2">
